containers/api-gateway/envoy.json
{
  "node": {
    "id": "api-gateway",
    "cluster": "api-gateway"
  },
  "admin": {
    "access_log_path": "/tmp/envoy-admin.log",
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9090
      }
    }
  },
  "stats_sinks": [
    {
      "name": "envoy.statsd",
      "typed_config": {
        "@type": "type.googleapis.com/envoy.config.metrics.v3.StatsdSink",
        "tcp_cluster_name": "statsd-exporter",
        "prefix": "api-gateway"
      }
    }
  ],
  "static_resources": {
    "listeners": [
      {
        "name": "grpc-traffic",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "codec_type": "AUTO",
                  "stat_prefix": "ingress_grpc",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "valytics-services",
                        "domains": [ "*" ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/match"
                            },
                            "route": {
                              "cluster": "match",
                              "timeout": "0s",
                              "max_stream_duration": {
                                "grpc_timeout_header_max": "0s"
                              }
                            }
                          },
                          {
                            "match": {
                              "prefix": "/riot-ingest"
                            },
                            "route": {
                              "cluster": "riot-ingest",
                              "timeout": "0s",
                              "max_stream_duration": {
                                "grpc_timeout_header_max": "0s"
                              }
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                      }
                    },
                    {
                      "name": "envoy.filters.http.grpc_web",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb"
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "riot-ingest",
        "connect_timeout": "0.25s",
        "type": "LOGICAL_DNS",
        "http2_protocol_options": { },
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "riot-ingest",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "riot-ingest",
                        "port_value": RIOT_INGEST_SERVICE_PORT
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "match",
        "connect_timeout": "0.25s",
        "type": "LOGICAL_DNS",
        "http2_protocol_options": { },
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "match",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "match",
                        "port_value": MATCH_SERVICE_PORT
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      },
      {
        "name": "statsd-exporter",
        "connect_timeout": "0.25s",
        "type": "LOGICAL_DNS",
        "http2_protocol_options": { },
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "statsd-exporter",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "statsd-exporter",
                        "port_value": 9125
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  }
}
